--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
 
   <body>
     <div id="root">Loading...</div>
+    <script>
+      var host = "Minghui-Zhao.github.io";
+      if ((host == window.location.host) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+    </script>
   </body>
 
 </html>
